<resources>
    <string name="app_name">My Knowplant</string>
    <string name="main_about">关于</string>
    <string name="main_plant">Plant</string>
    <string name="main_search">搜索</string>
    <string name="main_datebase">数据库</string>
    <string name="main_plantlists">植物列表</string>
    <string name="main_retrievalLists">植物检索表</string>
    <string name="main_myself">我的</string>
    <string name="_15595080298">15595080298</string>
    <string name="v1_0">v1.0</string>
    <string name="about">关于</string>
    <string name="介绍">本软件由生科学院钟茜老师制作，然后详细介绍</string>
    <string name="version">版本：</string>
    <string name="mail">联系邮箱：</string>
    <string name="address">联系地址：</string>
    <string name="telphone">联系电话：</string>
    <string name="detailedmail">552103917@qq.com</string>
    <string name="fulladdress">银川市西夏区北方民族大学</string>
    <string name="myself_question">我的问题</string>
    <string name="myself_answer">我的回答</string>
    <string name="myself_collect">我的收藏</string>
    <string name="plant_liliacae">百合科</string>
    <string name="plant_liliacae_intr">Lilium brownil var.viridulum Baker</string>
    <string name="plant_magnoliceae">木兰科</string>
    <string name="plant_magnoliceae_intr">Nelumbp nuciferas:Nelumbo lutea</string>
    <string name="plant_musaceae">芭蕉科</string>
    <string name="plant_musaceae_intr">Flos Chrysanthemi                         </string>
    <string name="adddatebase">添加数据库</string>
    <string name="add">点击添加更多数据库</string>
    <string name="search_bottom">扫一扫</string>
    <string name="search_top">搜索</string>


</resources>
