<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:weightSum="1"
    android:baselineAligned="false"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/about_top"
        android:background="@drawable/about_bac"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/main_about"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables"
            android:weightSum="1"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/main_about"
                android:layout_weight="0.18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:id="@+id/main_plant"
            android:layout_weight="2.70"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:textSize="25sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/main_search"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:src="@drawable/main_search"
                android:layout_weight="0.24" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/plantlist_line"
        tools:ignore="UselessLeaf"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/about_bac"
        android:paddingTop="5dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_datebaselists"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UseCompoundDrawables"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:src="@drawable/main_datebase"
                android:contentDescription=""
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_datebase"
                android:textColor="#000000"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_plantlists"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:src="@drawable/main_retrievallists"
                android:id="@+id/imageView"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_plantlists"
                android:textColor="#000000"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/main_retrivallists"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:src="@drawable/main_retrievallist"
                android:id="@+id/imageView2"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_retrivallists"
                android:textColor="#000000"
                android:id="@+id/textView"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_myself"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:src="@drawable/main_mine"
                tools:ignore="ContentDescription"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_myself"
                android:textSize="15dp"
                android:textColor="#000000"
                tools:ignore="SpUsage"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="6"
        android:layout_below="@+id/about_top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="2"
            android:weightSum="1">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="23dp"
                android:src="@drawable/about_introduce"
                android:id="@+id/imageView5"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/介绍"
                android:paddingLeft="5dp"
                android:textColor="#000000"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/plantlist_line"
            tools:ignore="UselessLeaf"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="51dp"
                android:layout_height="28dp"
                android:src="@drawable/about_version"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="20sp"
                android:textColor="#000000"
                android:id="@+id/textView2"
                android:layout_weight="2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_version"
                android:textColor="#000000"
                android:text="@string/v1_0"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="51dp"
                android:layout_height="28dp"
                android:src="@drawable/about_telphone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/telphone"
                android:textSize="20sp"
                android:textColor="#000000"
                tools:ignore="InefficientWeight"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_telphone"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/_15595080298"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/plantlist_line"
            tools:ignore="UselessLeaf"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/plantlist_line"
            tools:ignore="UselessLeaf"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="51dp"
                android:layout_height="28dp"
                android:src="@drawable/about_mail"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textSize="20sp"
                android:textColor="#000000"
                tools:ignore="InefficientWeight"
                android:id="@+id/textView4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_mail"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/detailedmail"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/plantlist_line"
            tools:ignore="UselessLeaf"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="51dp"
                android:layout_height="28dp"
                android:src="@drawable/about_address"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="20sp"
                android:textColor="#000000"
                tools:ignore="InefficientWeight"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_address"
                android:text="@string/fulladdress"
                android:textSize="20sp"
                android:textColor="#000000"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/plantlist_line"
            tools:ignore="UselessLeaf"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/plantlist_line"
            tools:ignore="UselessLeaf"
            />
    </LinearLayout>
</RelativeLayout>
