<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/retrival"
    android:background="#ffffff"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/retrival_top"
        android:background="@drawable/about_bac"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/main_about"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables"
            android:weightSum="1"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/main_about"
                android:layout_weight="0.18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:id="@+id/main_plant"
            android:layout_weight="2.70"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_plant"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:textSize="25sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/main_search"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:src="@drawable/main_search"
                android:layout_weight="0.24" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/retrival_top"
        android:layout_above="@+id/retrival_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LiliaceaeId"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="9"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/plant_liliaceae"
                android:id="@+id/plant_Liliaceae"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignRight="@+id/plant_Liliaceae"
                android:layout_weight="7"
                android:gravity="center"
                android:paddingBottom="0dp"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:text="百合科"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:layout_gravity="left"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_above="@id/textView1"
                    android:textColor="@color/colorText"
                    android:text="@string/plant_liliacae_intr"
                    android:textColorHighlight="@color/colorText"
                    android:textSize="10sp"
                    android:layout_gravity="left"
                    tools:ignore="HardcodedText,ObsoleteLayoutParam,SmallSp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/plant_launch"
                android:id="@+id/plantlists_back"
                android:layout_weight="1"
                tools:ignore="ContentDescription"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/magnoliaceaeId"
            android:padding="5dp"
            android:weightSum="9">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/plant_magnoliaceae"
                android:layout_weight="1"
                tools:ignore="ContentDescription"
                android:id="@+id/imageView8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="7">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_gravity="left"
                    android:text="@string/plant_magnoliceae"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="10sp"
                    android:textColor="@color/colorText"
                    android:id="@+id/textView4"
                    android:text="@string/plant_magnoliceae_intr"/>


            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/plant_launch"
                android:layout_weight="1"
                android:id="@+id/paint_launch2"
                android:layout_gravity="center"
                tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/musaceaeId"
            android:padding="5dp"
            android:weightSum="9">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/plant_musaceae"
                android:id="@+id/musaceae"
                android:layout_weight="1"
                tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="7">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_gravity="left"
                    android:text="@string/plant_musaceae"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plant_musaceae_intr"
                    android:layout_gravity="left"
                    android:textColor="@color/colorText"
                    android:textSize="10sp"
                    android:id="@+id/textView6"/>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/plant_launch"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/paint_launch3"
                tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:id="@+id/retrival_buttom"
        android:padding="5dp"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/about_bac"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_datebaselists"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UseCompoundDrawables"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:src="@drawable/main_datebase"
                android:contentDescription=""
                tools:ignore="ContentDescription"
                android:id="@+id/imageView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_datebase"
                android:textColor="#000000"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_plantlists"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:src="@drawable/main_retrievallists"
                android:id="@+id/imageView"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_plantlists"
                android:textColor="#000000"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/main_retrivallists"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:src="@drawable/main_retrievallist"
                android:id="@+id/imageView2"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_retrivallists"
                android:textColor="#000000"
                android:id="@+id/textView"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_myself"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:src="@drawable/main_mine"
                tools:ignore="ContentDescription"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_myself"
                android:textSize="15dp"
                android:textColor="#000000"
                tools:ignore="SpUsage"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
